--- a/general.css
+++ b/general.css
@@ -88,7 +88,7 @@ margin: 0 auto;
 #nav-toggle span {
   display: block;
   position: absolute;
-  height: 4px;
+  height: 2px;
   width: 100%;
   background: #666;
   left: 0;
@@ -155,10 +155,16 @@ transition: .3s ease-in-out;
   width: 80%;
   margin: 0 auto;
 }
-.section-1, .section-2, .section-3, .section-4 {
+.section {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
   place-items: center;
+}
+.section-2, .section-4 {
+  direction: rtl;
+}
+.section .text{
+  direction: ltr;
 }
 .photo img {
   vertical-align: bottom;
