--- a/general.css
+++ b/general.css
@@ -58,7 +58,7 @@ margin: 0 auto;
 }
 #global-nav ul li a {
   display: block;
-  width: 150px;
+  margin: 0 20px;
 }
 /* Fixed */
 #top-head.fixed {
@@ -118,42 +118,71 @@ main{
   background-color: white;
   box-shadow: 0 0 1px #dddddd;
   margin-top: 1rem;
+}
+.general {
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 1rem;
+}
+.general h1 {
+  position: relative;
+  padding: 0 65px;
+  text-align: center;
+  width: 50%;
+  margin: 0 auto;
   padding: 1rem 0;
 }
-#background h1{
-  margin-top: 0;
-  text-align: center;
+.general h1:before {
+  position: absolute;
+  top: calc(50% - 1px);
+  left: 0;
+  width: 100%;
+  height: 2px;
+  content: '';
+  background: #333;
 }
-.gallery {
+.general h1 span {
+  position: relative;
+  padding: 0 1em;
+  background: #fff;
+}
+.gridGallery {
   display: grid;
   grid-gap: 1rem;
   place-content: center;
   grid-template: repeat(2, auto) / repeat(2, auto);
 }
-.item a {
+.item {
   display: block;
-  height: 160px;
+  position: relative;
+  width: 150px;
   overflow: hidden;
   margin: 0 auto;
 }
-.item a img {
-  vertical-align: bottom;
-  width: auto;
+.item::before {
+  content: "";
+  display: block;
+  padding-top: 100%;
+}
+.item img {
+  position: absolute;
+  width: 100%;
   height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  object-fit: cover;
+  vertical-align: bottom;
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
   -webkit-transform: scale(1);
-transform: scale(1);
--webkit-transition: .3s ease-in-out;
-transition: .3s ease-in-out;
+  transform: scale(1);
 }
-.item a:hover img {
+.item:hover img {
   -webkit-transform: scale(1.3);
   transform: scale(1.3);
-}
-.summary {
-  width: 80%;
-  margin: 0 auto;
 }
 .section {
   display: grid;
@@ -163,13 +192,21 @@ transition: .3s ease-in-out;
 .section-2, .section-4 {
   direction: rtl;
 }
-.section .text{
+.text h2{
+  text-align: center;
+}
+.text p{
   direction: ltr;
 }
 .photo img {
   vertical-align: bottom;
   max-width: 100%;
   height: auto;
+}
+#gMap{
+  display: block;
+  width: 100%;
+  height: 300px;
 }
 .button a{
 width: 150px;
@@ -332,19 +369,19 @@ footer #under-nav a:hover::after {
 }
 
 @container main (min-width: 500px){
-  .summary {
+  .general {
     width: 70%;
   }
-  .gallery {
+  .gridGallery {
     grid-template: repeat(3, auto) / repeat(3, auto);
   }
 }
 
 @container main (min-width: 1000px){
-  .summary {
+  .general {
     width: 60%;
   }
-  .gallery {
+  .gridGallery {
     grid-template: repeat(4, auto) / repeat(4, auto);
   }
 }
