--- a/general.css
+++ b/general.css
@@ -58,7 +58,7 @@ margin: 0 auto;
 }
 #global-nav ul li a {
   display: block;
-  margin: 0 16px;
+  margin: 0 8px;
 }
 /* Fixed */
 #top-head.fixed {
@@ -177,8 +177,12 @@ main{
   transform: scale(1);
 }
 .item:hover img {
+  cursor: pointer;
   -webkit-transform: scale(1.3);
   transform: scale(1.3);
+}
+.lum-lightbox {
+  top: 50px;
 }
 .section {
   display: grid;
@@ -282,7 +286,7 @@ footer #under-nav a:hover::after {
 	transition: all .7s;
 }
 
-@container header (max-width: 1000px){
+@container header (max-width: 800px){
   #top-head {
     position: fixed;
     top: 0;
@@ -348,7 +352,7 @@ footer #under-nav a:hover::after {
   }
 }
 
-@container main (min-width: 500px){
+@container main (min-width: 438px){
   .general {
     width: 422px;
   }
@@ -357,7 +361,7 @@ footer #under-nav a:hover::after {
   }
 }
 
-@container main (min-width: 1000px){
+@container main (min-width: 584px){
   .general {
     width: 568px;
   }
@@ -366,7 +370,7 @@ footer #under-nav a:hover::after {
   }
 }
 
-@container footer (min-width: 500px){
+@container footer (min-width: 438px){
   #under-nav ul{
     width: 422px;
     padding-top: 8px;
